Fixed narbar get behind elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
     position: fixed;
     height: 10vh;
     top:0px; right:0px; left:0px;
+    z-index: 999;
 }
 
 section{
